# volleyball

./: 6-2.md  LICENSE  Vertical.hs  inventory.md  jv-strategy.md  matches.txt  players.md  practice.md  principles.md  schedules.txt  speech.md  strategy.md  summary.md  theories.md  vball-fusion.cabal
blocking/: Blocking.hs  Makefile  Match.y  README.md  Touches.y  blocking-analysis.txt  byu-h-final-2013.touch  byu-h-tam-semi-2013.touch  byu_hi_concordia_2013.match  cal-clarion-2014.match  clarion-11-11.touch  clarion-11-8.touch  clarion-iup.match  concordia-final-2013.touch  edinboro-clarion-2014.match  gannon-indy-2015.match  hawaii-stanford-1987.match  hilldale-clarion-2015.match  japan-ussr-1964.match  mens-byu-semi-2014.touch  penn-byu-2014.match  penn-stanford-2014.match  rus-bra-2012.match  tampa-fortsmith-2014.match  tampa-sw-minn-2014.match  tampa-wju-2014.match  wju-semi-2013.touch  wju-slipperyrock-2015.match
compound-interest/: Main.hs
hitting/: Hitting.hs  hitting.txt
programming-volleyball/: Hello.hs  LineUp.hs
scoring-rate/: MiniGames.hs
setting-row/: Ball.nix  Cache.hs  Main.hs  SettingRow.hs
src/: Boxscores.hs  FDSolver.hs  Main.hs  Match.hs  PageCache.hs  Positions.hs  Rankings.hs  Recruit.hs  Schedules.hs  Substitutions.hs  Tables.hs  TestFD.hs  VolleyParse.y
src/attic/: Roster.hs  Rosters.hs  Schools.hs  TagStruct.hs
tryouts/: Inventory.hs  Match.hs  Players.hs  RankingsByCoaches.hs  RankingsByPlayers.hs  Tryouts.hs
