name:    vball-fusion
version: 0.0.0

category:
synopsis:
description:
author:      Tom Hawkins <tomahawkins@gmail.com>
maintainer:  Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.8

executable vbf
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base         >= 4.8.2.0   && < 5.0,
    directory    >= 1.2.5     && < 1.3,
    bytestring   >= 0.10.6.0  && < 0.11,
    HTTP         >= 4000.3    && < 4000.4,
    SHA          >= 1.6.4     && < 1.7,
    tagsoup      >= 0.13.8    && < 0.14
  extensions:
  ghc-options: -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/vball-fusion.git

